<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:id="@+id/main"
		android:layout_width="match_parent"
		android:layout_height="match_parent">


	<fragment
			android:id="@+id/nav_host_fragment"
			android:name="androidx.navigation.fragment.NavHostFragment"
			android:layout_width="match_parent"
			android:clipChildren="false"
			android:clipToPadding="false"
			android:layout_height="match_parent"
			android:layout_weight="1"
			app:defaultNavHost="true"
			app:navGraph="@navigation/app_navigation" />


	<com.google.android.material.bottomnavigation.BottomNavigationView
			android:id="@+id/bottom_nav_view"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:menu="@menu/main_bottom_navigation"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>