...
			app:layout_constraintDimensionRatio="16:9"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

	<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tv_movie_detail_title"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:fontFamily="sans-serif-medium"
			android:paddingHorizontal="16dp"
			android:paddingVertical="8dp"
			android:textColor="@color/black"
...
