<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_marginBottom="16dp"
		android:layout_height="wrap_content">

	<androidx.appcompat.widget.AppCompatImageView
			android:id="@+id/iv_movie_backdrop"
			android:layout_width="0dp"
			android:layout_height="0dp"
			app:layout_constraintDimensionRatio="16:9"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />


	<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/tv_movie_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="16dp"
			android:textColor="@color/white"
			android:textSize="16sp"
			app:layout_constraintTop_toBottomOf="@id/iv_movie_backdrop"
			tools:text="Mot bo phim" />

</androidx.constraintlayout.widget.ConstraintLayout>